cross off list item rather than change css, much cleaner experience that way

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -12,7 +12,7 @@ background-color: rgb(211, 225, 225);
 }
 
 .completeClass {
-    background-color: aqua;
+    background-color: rgb(48, 114, 75);
 }
 
 td {
