hover button feature added

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -53,3 +53,7 @@ thead {
 button {
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
+
+button:hover {
+    background-color: #FCD0A1;
+}
